--- a/package.json
+++ b/package.json
@@ -18,6 +18,5 @@
     "url": "https://github.com/Thoregon/evolux.fluent/issues"
   },
   "homepage": "https://github.com/Thoregon/evolux.fluent#readme",
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
